trunk/NewArchive/88f6902735507c185c67b7d3761077e9-c944ac6b0eed3bfc48b1f78a894f6965/output
+ g++ -std=c++11 -O3 -march=native -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:35:4: error: base operand of ‘->’ has non-pointer type ‘Smart_pointer<double>’
   p->foo();
    ^
